# caer

./: .gitignore  .travis.yml  .travis.yml.inilabs  CMakeLists.txt  CMakeLists_ori.txt  ChangeLog  PetaLinuxARMTool.cmake  README  README.Dynap-se  README.MacOSX  README.OpenCV  README.Windows  README.md  README.porting  libcaersdk.pc.in  main.c  main.cpp  main.h  main_dynapse.c  main_dynapse_dvs_software.c  main_stereo.c  sonar-project.properties
ext/: CMakeLists.txt  buffers.h  net_rw.h  pathmax.h  threads_ext.h
ext/colorjet/: colorjet.h
ext/resources/: LiberationSans-Bold.h
ext/ringbuffer/: ringbuffer.h
ext/sshs/: sshs.c  sshs.cpp  sshs.h  sshs.hpp  sshs_helper.c  sshs_helper.cpp  sshs_internal.h  sshs_internal.hpp  sshs_node.c  sshs_node.cpp
modules/: CMakeLists.txt
modules/abmof/: CMakeLists.txt  caer_abmof.cpp
modules/abmof/abmof_accel/: abmof.h  abmof_accel.cpp  mmult_accel.cpp  mmult_accel.h
modules/activityindicator/: CMakeLists.txt
modules/arduinocnt/: CMakeLists.txt  arduinocnt.c
modules/backgroundactivityfilter/: CMakeLists.txt  backgroundactivityfilter.c
modules/caffeinterface/: CMakeLists.txt  README.md  caffewrapper_module.c  classify.cpp  classify.hpp  wrapper.cpp  wrapper.h
modules/cameracalibration/: CMakeLists.txt  calibration.cpp  calibration.hpp  calibration_settings.h  calibration_wrapper.h  cameracalibration.c
modules/cameras/: davis.c  davis_rpi.c  davis_utils.h  dvs128.c  edvs.c
modules/depressingsynapsefilter/: CMakeLists.txt  depressingsynapsefilter.c
modules/dvsnoisefilter/: dvsnoisefilter.c
modules/fpgaspikegen/: CMakeLists.txt  fpgaspikegen.c  fpgaspikegen.h
modules/fpgaspikegen/data/: README.txt  generate_input.py  stimulus.txt
modules/frameenhancer/: CMakeLists.txt  frameenhancer.c
modules/framestatistics/: CMakeLists.txt  framestatistics.cpp
modules/imagegenerator/: CMakeLists.txt  imagegenerator.c
modules/ini/: CMakeLists.txt  davis.c  davis_common.c  davis_common.h  davis_fx2.c  davis_fx3.c  davis_utils.h  dvs128.c  dynapse.c  dynapse_common.c  dynapse_common.h  dynapse_utils.h  edvs.c  gen_spikes.c
modules/inout/: CMakeLists.txt
modules/inout/in/: file.c  input_common.c  input_common.h  net_tcp.c  unix_socket.c
modules/meanratefilter/: CMakeLists.txt  meanratefilter.c
modules/meanratefilter_dvs/: CMakeLists.txt  meanratefilter_dvs.c
modules/mediantracker/: CMakeLists.txt  mediantracker.c
modules/misc/: CMakeLists.txt  inout_common.h
modules/misc/in/: CMakeLists.txt  file.c  input_common.c  input_common.h  net_tcp.c  unix_socket.c
modules/monitorneufilter/: CMakeLists.txt  monitorneufilter.c
modules/netparser/: CMakeLists.txt  Neuron.cpp  Neuron.h  README.md  helloNet.txt  hellonet.txt  netparser.cpp
modules/netparser/documentation/: _DOCUMENTATION.html  _neuron_8h_source.html  annotated.html  class_cam_clash_pred-members.html  class_cam_clash_pred.html  class_connection_manager-members.html  class_connection_manager.html  classes.html  dir_d300ff4e43e814dc920bea7d877bd4af.html  files.html  index.html  netparser_documentation.html  (+4 more)
modules/nullhopinterface/: CMakeLists.txt  axi_channel_timeout_excep.cpp  axi_dma_klib.cpp  axi_dma_klib.hpp  axi_dma_lib.cpp  axi_dma_lib.hpp  axi_dma_pkg.cpp  axi_gpio.cpp  axi_gpio.hpp  npp_log_utilities.cpp  npp_performance_profiler.cpp  npp_performance_profiler.hpp  npp_std_func_pkg.cpp  nullhopinterface.c  roshambo_leds.cpp  roshambo_leds.hpp  wrapper.cpp  wrapper.h  zs_axi_dma_lib.cpp  zs_axi_dma_lib.hpp  zs_axi_formatter.cpp  zs_axi_formatter.h  zs_backend_interface.cpp  zs_backend_interface.h  zs_cnn_layer.cpp  zs_cnn_layer.h  zs_driver.cpp  zs_driver.hpp  zs_fc_layer.cpp  zs_fc_layer.h  zs_fpga_test_top.cpp  zs_monitor.cpp  zs_monitor.h  zs_monitor_cnn_layer.cpp  zs_monitor_cnn_layer.h  zs_std_func_pkg.cpp  zs_systemverilog_interface.cpp  zs_top_level_pkg.cpp
modules/opencvopticflow/: CMakeLists.txt  opticflow.c  opticflow.cpp  opticflow_wrapper.h
modules/poissonspikegen/: CMakeLists.txt  poissonspikegen.c  poissonspikegen.h
modules/poseestimation/: CMakeLists.txt  poseestimation.c  poseestimation.cpp  poseestimation.hpp  poseestimation_settings.h  poseestimation_wrapper.cpp  poseestimation_wrapper.h
modules/rectangulartracker/: CMakeLists.txt  rectangulartracker.c
modules/rectangulartracker_dynamic/: CMakeLists.txt  rectangulartracker_dynamic.c
modules/rectangulartracker_pi/: CMakeLists.txt  rectangulartracker_pi.c  rectangulartracker_pi.h
modules/recurrentnet/: CMakeLists.txt  recurrentnet.c  recurrentnet.h
modules/reservoir/: CMakeLists.txt  reservoir.c
modules/rotatefilter/: CMakeLists.txt  rotatefilter.c
modules/softspikegen/: CMakeLists.txt  softspikegen.c
modules/spikefeatures/: CMakeLists.txt  spikefeatures.c  spikefeatures.h
modules/spiralview/: CMakeLists.txt  spiralview.c  spiralview.h
modules/statistics/: CMakeLists.txt  statistics.c  statistics.h
modules/stereocalibration/: CMakeLists.txt  calibration.cpp  calibration.hpp  calibration_settings.h  calibration_wrapper.cpp  calibration_wrapper.h  stereocalibration.c
modules/stereomatching/: CMakeLists.txt  matching_settings.h  stereomatching.c  stereomatching.cpp  stereomatching.hpp  stereomatching_wrapper.cpp  stereomatching_wrapper.h
modules/synapsereconfig/: CMakeLists.txt  synapsereconfig.c  synapsereconfig.h
modules/visualizer/: CMakeLists.txt  visualizer.c  visualizer.cpp  visualizer.h  visualizer.hpp  visualizer_handlers.c  visualizer_handlers.cpp  visualizer_handlers.h  visualizer_handlers.hpp  visualizer_handlers_frame.c  visualizer_renderers.c  visualizer_renderers.cpp  visualizer_renderers.h  visualizer_renderers.hpp
modules/visualizersfml/: CMakeLists.txt  visualizer.cpp  visualizer.h  visualizer.hpp  visualizer_handlers.cpp  visualizer_renderers.cpp  visualizer_renderers.hpp
src/: CMakeLists.txt  config.cpp  config.h  config_server.cpp  config_server.h  log.c  main.cpp  mainloop.cpp  mainloop.h  mainloop_sdk.cpp  misc.h  module.cpp  module.h  module_sdk.cpp  portability_sdk.cpp
src/sshs/: sshs.cpp  sshs_internal.hpp  sshs_node.cpp
(+69 files in other folders)
