# SSHS needs Mini-XML support to work.
PKG_CHECK_MODULES(MXML REQUIRED mxml>=2.7)

SET(CAER_INCDIRS ${CAER_INCDIRS} ${MXML_INCLUDE_DIRS} PARENT_SCOPE)
SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${MXML_LIBRARY_DIRS} PARENT_SCOPE)

SET(CAER_C_LIBS ${CAER_C_LIBS} ${MXML_LIBRARIES} PARENT_SCOPE)

# Support files to compile.
SET(CAER_SSHS_FILES
	ext/sshs/sshs.cpp
	ext/sshs/sshs_helper.cpp
	ext/sshs/sshs_node.cpp)

SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${CAER_SSHS_FILES} PARENT_SCOPE)
