# Add all modules
ADD_SUBDIRECTORY(backgroundactivityfilter)
#ADD_SUBDIRECTORY(caffeinterface)
ADD_SUBDIRECTORY(cameracalibration)
ADD_SUBDIRECTORY(frameenhancer)
#ADD_SUBDIRECTORY(imagegenerator)
#ADD_SUBDIRECTORY(imagestreamerbeeper)
ADD_SUBDIRECTORY(ini)
ADD_SUBDIRECTORY(misc)
ADD_SUBDIRECTORY(statistics)
ADD_SUBDIRECTORY(visualizer)
ADD_SUBDIRECTORY(poseestimation)
#ADD_SUBDIRECTORY(stereocalibration)
#ADD_SUBDIRECTORY(stereomatching)
#ADD_SUBDIRECTORY(meanratefilter)
#ADD_SUBDIRECTORY(meanratefilter_dvs)
#ADD_SUBDIRECTORY(monitorneufilter)
#ADD_SUBDIRECTORY(nullhopinterface)
#ADD_SUBDIRECTORY(infofilter)
#ADD_SUBDIRECTORY(rectangulartracker)
#ADD_SUBDIRECTORY(rectangulartracker_dynamic)
ADD_SUBDIRECTORY(mediantracker)
#ADD_SUBDIRECTORY(dvstodynapse)
#ADD_SUBDIRECTORY(learningfilter)
#ADD_SUBDIRECTORY(gesturelearningfilter)
ADD_SUBDIRECTORY(rotatefilter)
#ADD_SUBDIRECTORY(effectivetransferfunction)
#ADD_SUBDIRECTORY(activityindicator)
#ADD_SUBDIRECTORY(trainfromcaffe)
#ADD_SUBDIRECTORY(opencvopticflow)
#ADD_SUBDIRECTORY(denoisingautoencoder)
#ADD_SUBDIRECTORY(pixelmatrix)
#ADD_SUBDIRECTORY(depressingsynapsefilter)
#ADD_SUBDIRECTORY(spiralview)

# Support private modules that don't get considered for commit,
# by reserving a directory called PrivateModules with its own
# CMake PrivateModules.txt, and ignoring it.
INCLUDE(PrivateModules/PrivateModules.txt OPTIONAL)
