SET(CAER_SRC_FILES
	base/log.c
	base/misc.c)
	base/config.cpp
	base/config_server.cpp
	base/module.cpp
	base/mainloop.cpp)

SET(LIBCAERSDK_SRC_FILES
	base/module_sdk.cpp
	base/mainloop_sdk.cpp)

# Compile SDK library.
ADD_LIBRARY(caersdk SHARED ${LIBCAERSDK_SRC_FILES})

SET_TARGET_PROPERTIES(caersdk
    PROPERTIES
    SOVERSION ${PROJECT_VERSION_MAJOR}
    VERSION ${PROJECT_VERSION}
)

TARGET_LINK_LIBRARIES(caersdk ${LIBCAERSDK_LIBS})

IF (OS_WINDOWS)
    INSTALL(TARGETS caersdk RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
ELSE()
    INSTALL(TARGETS caersdk DESTINATION ${CMAKE_INSTALL_LIBDIR})
ENDIF()

# Compile main caer executable.
ADD_EXECUTABLE(caer-bin ${CAER_SRC_FILES} ${LIBCAERSDK_SRC_FILES})
TARGET_LINK_LIBRARIES(caer-bin ${CAER_LIBS} caersdk)
INSTALL(TARGETS caer-bin DESTINATION ${CMAKE_INSTALL_BINDIR})
