PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

SET(ABMOF_INCDIRS ${CAER_INCDIRS} ${OPENCV3_INCLUDE_DIRS})
SET(ABMOF_LIBDIRS ${CAER_LIBDIRS} ${OPENCV3_LIBRARY_DIRS})

SET(ABMOF_LIBS ${CAER_LIBS} ${OPENCV3_LIBRARIES})

INCLUDE_DIRECTORIES(${ABMOF_INCDIRS})

INCLUDE_DIRECTORIES ($ENV{HOME}/github_prjs/xfopencv/include)
# INCLUDE_DIRECTORIES ($ENV{HOME}/Xilinx/Vivado/2018.2/include)
INCLUDE_DIRECTORIES ($ENV{HOME}/Xilinx/SDx/2018.2/target/aarch32-linux/include)
INCLUDE_DIRECTORIES (./)
INCLUDE_DIRECTORIES (./abmof_accel)

set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -O3 -g -fmessage-length=0 -MMD -MP -fPIC -D __SDSCC__")

LINK_DIRECTORIES(${ABMOF_LIBDIRS})

set(ABMOF_ACCEL_SRCS ./abmof_accel/abmof_accel.cpp ./abmof_accel/mmult_accel.cpp)
MESSAGE("The variable abmof_accel_sources is ${ABMOF_ACCEL_SRCS}.")
ADD_LIBRARY(my_filter SHARED caer_abmof.cpp ${ABMOF_ACCEL_SRCS})

SET_TARGET_PROPERTIES(my_filter
	PROPERTIES
	PREFIX "libcaer_"
)

# MESSAGE("The variable CAER_LIBS is ${CAER_LIBS}")
# MESSAGE("The variable OpenCV_LIBS is ${OpenCV_LIBS}")
MESSAGE("The variable ABMOF_LIBS is ${ABMOF_LIBS}")

TARGET_LINK_LIBRARIES(my_filter ${ABMOF_LIBS})

INSTALL(TARGETS my_filter DESTINATION ${CAER_MODULES_DIR})
