IF (NOT ARDUINOCNT)
	SET(ARDUINOCNT 0 CACHE BOOL "Enable arduino control module")
ENDIF()

IF (ARDUINOCNT)

	SET(ARDUINOCNT_C_SRC_FILES arduinocnt.c arduino-serial-lib.c)
        
	ADD_LIBRARY(arduinocnt SHARED ${ARDUINOCNT_C_SRC_FILES})

	TARGET_LINK_LIBRARIES(arduinocnt ${CAER_C_LIBS})

	INSTALL(TARGETS arduinocnt DESTINATION ${CM_SHARE_DIR})

ENDIF()
