IF (NOT ENABLE_CAMERACALIBRATION)
	SET(ENABLE_CAMERACALIBRATION 0 CACHE BOOL "Enable the camera calibration module (using OpenCV)")
ENDIF()

IF (ENABLE_CAMERACALIBRATION)
	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(CALIB_INCDIRS ${CAER_INCDIRS} ${OPENCV3_INCLUDE_DIRS})
	SET(CALIB_LIBDIRS ${CAER_LIBDIRS} ${OPENCV3_LIBRARY_DIRS})

	SET(CALIB_C_LIBS ${CAER_C_LIBS})
	SET(CALIB_CXX_LIBS ${CAER_CXX_LIBS} ${OPENCV3_LIBRARIES})
	
	INCLUDE_DIRECTORIES(${CALIB_INCDIRS})
	LINK_DIRECTORIES(${CALIB_LIBDIRS})

	SET(CALIB_C_SRC_FILES cameracalibration.c)
	SET(CALIB_CXX_SRC_FILES calibration.cpp calibration_wrapper.cpp)

	ADD_LIBRARY(cameracalibration SHARED ${CALIB_C_SRC_FILES} ${CALIB_CXX_SRC_FILES})

	SET_TARGET_PROPERTIES(cameracalibration
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(cameracalibration ${CALIB_C_LIBS} ${CALIB_CXX_LIBS})
ENDIF()
