IF (NOT ENABLE_FRAMEENHANCER)
	SET(ENABLE_FRAMEENHANCER 0 CACHE BOOL "Enable the APS frame enhancing/demosaicing module")
ENDIF()

IF (ENABLE_FRAMEENHANCER)
	SET(FRAMEENHANCER_SRC_FILES frameenhancer.c)

	ADD_LIBRARY(frameenhancer SHARED ${FRAMEENHANCER_SRC_FILES})

	SET_TARGET_PROPERTIES(frameenhancer
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(frameenhancer ${CAER_C_LIBS})
ENDIF()
