IF (NOT FRAMESTATISTICS)
	SET(FRAMESTATISTICS 0 CACHE BOOL "Enable the frame histogram statistics module")
ENDIF()

IF (FRAMESTATISTICS)
	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(FSTAT_INCDIRS ${CAER_INCDIRS} ${OPENCV3_INCLUDE_DIRS})
	SET(FSTAT_LIBDIRS ${CAER_LIBDIRS} ${OPENCV3_LIBRARY_DIRS})

	SET(FSTAT_C_LIBS ${CAER_C_LIBS})
	SET(FSTAT_CXX_LIBS ${CAER_CXX_LIBS} ${OPENCV3_LIBRARIES})

	INCLUDE_DIRECTORIES(${FSTAT_INCDIRS})
	LINK_DIRECTORIES(${FSTAT_LIBDIRS})

	ADD_LIBRARY(framestatistics SHARED framestatistics.cpp)

	SET_TARGET_PROPERTIES(framestatistics
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(framestatistics ${FSTAT_C_LIBS} ${FSTAT_CXX_LIBS})

	INSTALL(TARGETS framestatistics DESTINATION ${CM_SHARE_DIR})
ENDIF()
