IF (NOT ENABLE_OPENCV)
	SET(ENABLE_OPENCV 0 CACHE BOOL "Use OpenCV (needed for frame statistic histogram module)")
ENDIF()

IF (ENABLE_OPENCV)
	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(FSTAT_INCDIRS ${CAER_INCDIRS} ${OPENCV3_INCLUDE_DIRS})
	SET(FSTAT_LIBDIRS ${CAER_LIBDIRS} ${OPENCV3_LIBRARY_DIRS})

	SET(FSTAT_LIBS ${CAER_LIBS} ${OPENCV3_LIBRARIES})

	INCLUDE_DIRECTORIES(${FSTAT_INCDIRS})
	LINK_DIRECTORIES(${FSTAT_LIBDIRS})

	ADD_LIBRARY(framestatistics SHARED framestatistics.cpp)

	SET_TARGET_PROPERTIES(framestatistics
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(framestatistics ${FSTAT_LIBS})

	INSTALL(TARGETS framestatistics DESTINATION ${CAER_MODULES_DIR})
ENDIF()
