IF (NOT DVS128)
	SET(DVS128 0 CACHE BOOL "Enable support for DVS128 devices")
ENDIF()

IF (NOT DAVIS)
	SET(DAVIS 0 CACHE BOOL "Enable support for DAVIS devices")
ENDIF()

IF (NOT DYNAPSE)
	SET(DYNAPSE 0 CACHE BOOL "Enable support for DYNAP-SE (neuromorphic processor)")
ENDIF()

IF (DVS128)
	ADD_LIBRARY(dvs128 SHARED dvs128.c)

	SET_TARGET_PROPERTIES(dvs128
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(dvs128 ${CAER_C_LIBS})
ENDIF()

IF (DAVIS)
	ADD_LIBRARY(davis SHARED davis_common.c)

	SET_TARGET_PROPERTIES(davis
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(davis ${CAER_C_LIBS})
ENDIF()

IF (DYNAPSE)
	ADD_LIBRARY(dynapse SHARED dynapse_common.c gen_spikes.c)

	SET_TARGET_PROPERTIES(dynapse
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(dynapse ${CAER_C_LIBS})
ENDIF()
