IF (NOT DVS128)
	SET(DVS128 0 CACHE BOOL "Enable support for DVS128 devices")
ENDIF()

IF (NOT EDVS)
	SET(EDVS 0 CACHE BOOL "Enable support for eDVS4337 devices")
ENDIF()

IF (NOT DAVIS)
	SET(DAVIS 0 CACHE BOOL "Enable support for DAVIS devices")
ENDIF()

IF (NOT DAVIS_RPI)
	SET(DAVIS_RPI 0 CACHE BOOL "Enable support for DAVIS on Raspberry-Pi")
ENDIF()

IF (NOT DYNAPSE)
	SET(DYNAPSE 0 CACHE BOOL "Enable support for DYNAP-SE (neuromorphic processor)")
ENDIF()

IF (DVS128)
	ADD_LIBRARY(dvs128 SHARED dvs128.c)

	SET_TARGET_PROPERTIES(dvs128
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(dvs128 ${CAER_C_LIBS})

	INSTALL(TARGETS dvs128 DESTINATION ${CM_SHARE_DIR})
ENDIF()

IF (EDVS)
	ADD_LIBRARY(edvs SHARED edvs.c)

	SET_TARGET_PROPERTIES(edvs
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(edvs ${CAER_C_LIBS})

	INSTALL(TARGETS edvs DESTINATION ${CM_SHARE_DIR})
ENDIF()

IF (DAVIS)
	ADD_LIBRARY(davis SHARED davis.c)

	SET_TARGET_PROPERTIES(davis
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(davis ${CAER_C_LIBS})

	INSTALL(TARGETS davis DESTINATION ${CM_SHARE_DIR})
ENDIF()

IF (DAVIS_RPI AND OS_LINUX)
	# Raspberry-Pi camera module support (Linux-only).
	ADD_LIBRARY(davis_rpi SHARED davis_rpi.c)

	SET_TARGET_PROPERTIES(davis_rpi
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(davis_rpi ${CAER_C_LIBS})

	INSTALL(TARGETS davis_rpi DESTINATION ${CM_SHARE_DIR})
ENDIF()

IF (DYNAPSE)
	ADD_LIBRARY(dynapse SHARED dynapse.c)

	SET_TARGET_PROPERTIES(dynapse
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(dynapse ${CAER_C_LIBS})

	INSTALL(TARGETS dynapse DESTINATION ${CM_SHARE_DIR})
ENDIF()
