IF (NOT NULLHOPINTERFACE)
	SET(NULLHOPINTERFACE 0 CACHE BOOL "Enable Nullhop deep-learning interface module to accelerator")
	IF (NOT FPGA_MODE)
		SET(FPGA_MODE 1 CACHE BOOL "Set NullHop Interface to work only with the Zynq FPGA")
	ENDIF()

ENDIF()

IF (NULLHOPINTERFACE)

	IF (FPGA_MODE)
		SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DFPGA_MODE=1)
	ENDIF()
	IF(ENABLE_RESULT_MONITOR)
		SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_RESULT_MONITOR=1)
	ENDIF()
	IF(SOFTWARE_ONLY_MODE)
		SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DSOFTWARE_ONLY_MODE=1)
	ENDIF()

	SET(NULLHOPIF_INCDIRS ${CAER_INCDIRS})
	SET(NULLHOPIF_LIBDIRS ${CAER_LIBDIRS})
	SET(NULLHOPIF_C_LIBS ${CAER_C_LIBS})
	SET(NULLHOPIF_C_SRC_FILES "")
	SET(NULLHOPIF_CXX_LIBS ${CAER_CXX_LIBS})
	SET(NULLHOPIF_CXX_SRC_FILES "")

	FIND_PACKAGE(Curses)
	IF (Curses_FOUND)
	        MESSAGE(STATUS "Curses FOUND - ${CURSES_LIBRARIES} ${CURSES_INCLUDE_DIRS} ${CURSES_LIBRARY_DIRS} ${CURSES_LIBRARIES}")
	        SET(NULLHOPIF_CXX_INCDIRS ${NULLHOPIF_INCDIRS} ${CURSES_INCLUDE_DIRS})
	        SET(NULLHOPIF_CXX_LIBDIRS ${NULLHOPIF_LIBDIRS} ${CURSES_LIBRARY_DIRS})
	        SET(NULLHOPIF_CXX_LIBS ${NULLHOPIF_CXX_LIBS} ${CURSES_LIBRARIES})
	ENDIF()

	SET(NULLHOPIF_C_SRC_FILES nullhopinterface.c)
	SET(NULLHOPIF_CXX_SRC_FILES npp_log_utilities.cpp npp_std_func_pkg.cpp  zs_top_level_pkg.cpp zs_axi_formatter.cpp zs_backend_interface.cpp zs_monitor_cnn_layer.cpp zs_monitor.cpp zs_cnn_layer.cpp zs_fc_layer.cpp  axi_gpio.cpp axi_channel_timeout_excep.cpp zs_axi_dma_lib.cpp axi_dma_lib.cpp zs_driver.cpp wrapper.cpp)

	INCLUDE_DIRECTORIES(${NULLHOPIF_INCDIRS})
	LINK_DIRECTORIES(${NULLHOPIF_LIBDIRS} )
	
	ADD_LIBRARY(nullhopinterface SHARED ${NULLHOPIF_CXX_SRC_FILES} ${NULLHOPIF_C_SRC_FILES})

	TARGET_LINK_LIBRARIES(nullhopinterface ${NULLHOPIF_C_LIBS} ${NULLHOPIF_CXX_LIBS})
	
	INSTALL(TARGETS nullhopinterface DESTINATION ${CM_SHARE_DIR})
	
ENDIF()
